# tape

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md
cmake/: FindOpenBLAS.cmake  paddle.cmake
paddle/: CMakeLists.txt
paddle/fluid/: CMakeLists.txt
paddle/fluid/framework/: CMakeLists.txt  accelerator.cc  accelerator.h  accelerator_test.cc  attribute.cc  attribute.h  data_device_transform.cc  data_device_transform.h  data_layout_transform.cc  data_layout_transform.h  data_layout_transform_test.cc  data_transform.cc  data_transform.h  data_type.cc  data_type.h  data_type_transform.cc  data_type_transform.h  data_type_transform_test.cc  data_type_transform_test.cu  ddim.cc  ddim.h  ddim_test.cc  dim.h  dim_test.cu  eigen.h  eigen_test.cc  framework.proto  grad_op_desc_maker.cc  grad_op_desc_maker.h  init.cc  init.h  lod_rank_table.cc  lod_rank_table.h  lod_tensor.cc  lod_tensor.h  lod_tensor_array.h  lod_tensor_test.cc  lod_tensor_test.cu  op_desc.cc  op_desc.h  (+39 more)
paddle/fluid/framework/details/: op_registry.h
paddle/fluid/framework/math/: CMakeLists.txt  blas.cc  blas.h  blas_impl.cu.h  blas_impl.h  math_function.cc  math_function.cu  math_function.h  math_function_impl.h  math_function_test.cc  math_function_test.cu
paddle/fluid/memory/: CMakeLists.txt  malloc.cc  malloc.h  malloc_test.cc  memcpy.cc  memcpy.h  pinned_memory_test.cu
paddle/fluid/memory/detail/: CMakeLists.txt  buddy_allocator.cc  buddy_allocator.h  memory_block.cc  memory_block.h  memory_block_desc.cc  meta_cache.cc  system_allocator.cc  system_allocator.h  system_allocator_test.cc
paddle/fluid/operators/: CMakeLists.txt  adam_op.cc  adam_op.cu  adam_op.h  adam_op_test.cc
paddle/fluid/operators/detail/: safe_ref.h
paddle/fluid/operators/math/: CMakeLists.txt  selected_rows_functor.cc  selected_rows_functor.cu  selected_rows_functor.h  selected_rows_functor_test.cc  selected_rows_functor_test.cu
paddle/fluid/platform/: CMakeLists.txt  assert.h  cpu_info.cc  cpu_info.h  cpu_info_test.cc  cuda_device_function.h  cuda_primitives.h  cuda_profiler.h  cudnn_helper.h  cudnn_helper_test.cc  device_context.cc  device_context.h  device_context_test.cu  device_tracer.cc  device_tracer.h  enforce.cc  enforce.h  enforce_test.cc  float16.h  float16_test.cc  float16_test.cu  for_range.h  gpu_info.cc  gpu_info.h  mkldnn_helper.h  nccl_helper.h  place.cc  place.h  place_test.cc  profiler.cc  profiler.h  profiler_test.cc  transform.h  transform_test.cu
paddle/fluid/platform/details/: cuda_transform_iterator_cast.h
paddle/fluid/platform/dynload/: CMakeLists.txt  cublas.cc  cublas.h  cudnn.cc  cudnn.h  cupti.cc  cupti.h  curand.cc  curand.h  dynamic_loader.cc  dynamic_loader.h  nccl.cc  nccl.h  tensorrt.cc  tensorrt.h  warpctc.cc  warpctc.h
paddle/fluid/recordio/: CMakeLists.txt  chunk.cc  chunk.h  chunk_test.cc  header.cc  header.h  header_test.cc  scanner.cc  scanner.h  writer.cc  writer.h  writer_scanner_test.cc
paddle/fluid/string/: CMakeLists.txt  piece.cc  piece.h  piece_test.cc  printf.h  printf_test.cc  to_string.h  to_string_test.cc
paddle/fluid/string/tinyformat/: tinyformat.h
src/: CMakeLists.txt
tape/: test_tape.cc  variable.cc
test/: CMakeLists.txt  openblas_test.cc
tools/pre-commit-hooks/: copyright.py  cpplint.bash
